// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`max heap (the default heap) it should get children indexes 1`] = `
Array [
  3,
  4,
]
`;

exports[`max heap (the default heap) it should get children indexes 2`] = `
Array [
  7,
]
`;

exports[`max heap (the default heap) it should get children indexes 3`] = `Array []`;

exports[`max heap (the default heap) it should get parent index 1`] = `0`;

exports[`max heap (the default heap) it should get parent index 2`] = `2`;

exports[`max heap (the default heap) it should get preferred child index 1`] = `1`;

exports[`max heap (the default heap) it should get preferred child index 2`] = `4`;

exports[`max heap (the default heap) it should get preferred child index 3`] = `7`;

exports[`max heap (the default heap) it should get preferred child index 4`] = `-1`;

exports[`max heap (the default heap) should delete 1`] = `
Array [
  1,
]
`;

exports[`max heap (the default heap) should delete 2`] = `
Array [
  99,
  97,
  98,
  94,
  96,
  95,
]
`;

exports[`max heap (the default heap) should heapifyDown 1`] = `
Array [
  100,
  98,
  89,
  64,
  32,
  72,
  4,
]
`;

exports[`max heap (the default heap) should heapifyDown 2`] = `
Array [
  100,
  98,
  89,
  64,
  32,
  72,
  4,
]
`;

exports[`max heap (the default heap) should insert to the correct position 1`] = `
Array [
  100,
  99,
  98,
  99,
  65,
  32,
  33,
  3,
  60,
]
`;

exports[`max heap (the default heap) swap should work 1`] = `
Array [
  99,
  100,
  98,
  60,
  65,
  32,
  33,
  3,
]
`;

exports[`max heap (the default heap) swap should work 2`] = `
Array [
  100,
  99,
  98,
  60,
  65,
  32,
  33,
  3,
]
`;
